# VoiceNav-AI

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  coverage.xml  llm_playwright.py  llm_playwright_bkup.py  playwright_lambda.py  pyproject.toml  requirements-dev.txt  voice_nav.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Client/: .eslintrc.js  .eslintrc.json  .prettierrc  app.js  app.min.js  config.example.js  index.html  package-lock.json  package.json  style.css
Src/: __init__.py
Src/ StoreConn-voicenav/: app.py
Src/bedrock-processor/: __init__.py
Src/bedrock_processor/: app.py  app_clean.py  click-home-test.json
Src/playwright_processor/: app.py
Src/store-conn/: __init__.py  app.py
Src/store_conn/: app.py
Src/transcribe-processor/: app.py
Src/transcribe_processor/: __init__.py  app.py
Src/voicenav_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: API.md  DEPLOYMENT.md
examples/: integration-example.html
infrastructure/: README.md  cdk.json  package-lock.json  package.json
infrastructure/lib/: voicenav-stack.js  voicenav-stack.ts
scripts/: validate_structure.py
tests/: test_store_conn.py  test_store_conn_new.py
